Remove monthly filter and add Oceania Region

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -30,6 +30,7 @@
   "filters.united_kingdom": "United Kingdom",
   "filters.germany": "Germany",
   "filters.north_america": "North America",
+  "filters.oceania": "Oceania",
   "filters.asia": "Asia",
   "nav.menu.monthly": "Monthly",
   "nav.menu.weekly": "Weekly",
