--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -30,6 +30,7 @@
   "filters.united_kingdom": "Reino Unido",
   "filters.germany": "Alemanha",
   "filters.north_america": "América do Norte",
+  "filters.oceania": "Oceania",
   "filters.asia": "Ásia",
   "nav.menu.monthly": "Mensal",
   "nav.menu.weekly": "Semanal",
